--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "next": "12.0.10",
+    "next-api-og-image": "^2.1.1",
     "next-themes": "^0.0.15",
     "preact": "^10.6.5",
+    "query-string": "^7.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@tailwindcss/forms": "^0.4.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
