--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "preact": "^10.6.5",
     "query-string": "^7.1.1",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.0",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "autoprefixer": "^10.4.2",
