--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-starter",
+  "name": "og-image",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,9 @@
     "tsc": "tsc --pretty --noEmit --incremental false",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cy": "cypress open",
+    "cy:headless": "cypress run"
   },
   "dependencies": {
     "clsx": "^1.1.1",
@@ -39,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "autoprefixer": "^10.4.2",
+    "cypress": "^9.4.1",
     "eslint": "^8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
@@ -46,6 +49,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
+    "local-cypress": "^1.2.3",
     "next-sitemap": "^2.1.14",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
