--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "next-sitemap",
     "export": "next export",
     "start": "next start",
+    "deduplicate": "npx yarn-deduplicate && yarn install",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
     "lint:strict": "eslint --max-warnings=0 src",
@@ -19,42 +20,42 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "next": "12.1.5",
-    "next-api-og-image": "^3.0.0",
+    "next": "12.1.4",
+    "next-api-og-image": "^2.2.1",
     "next-themes": "^0.0.15",
     "preact": "^10.7.1",
     "query-string": "^7.1.1",
-    "react": "18.1.0",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.1.0",
-    "react-hook-form": "^7.30.0",
+    "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@tailwindcss/forms": "^0.5.0",
-    "@types/node": "17.0.30",
-    "@types/react": "18.0.8",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.42",
     "@types/react-copy-to-clipboard": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "autoprefixer": "^10.4.6",
-    "cypress": "^9.6.0",
-    "eslint": "^8.14.0",
-    "eslint-config-next": "12.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "autoprefixer": "^10.4.4",
+    "cypress": "^9.5.3",
+    "eslint": "^8.13.0",
+    "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.4.1",
+    "lint-staged": "^12.3.7",
     "local-cypress": "^1.2.5",
-    "next-sitemap": "^2.5.20",
-    "postcss": "^8.4.13",
+    "next-sitemap": "^2.5.19",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.10",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4"
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "tailwindcss": "^3.0.23",
+    "typescript": "4.6.3"
   }
 }
