--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "next": "12.1.4",
+    "next": "12.1.6",
     "next-api-og-image": "^2.2.1",
     "next-themes": "^0.0.15",
     "preact": "^10.7.1",
     "query-string": "^7.1.1",
-    "react": "17.0.2",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.29.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1"
@@ -36,9 +36,9 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@tailwindcss/forms": "^0.5.0",
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.42",
-    "@types/react-copy-to-clipboard": "^5.0.2",
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "autoprefixer": "^10.4.4",
