--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "next": "15.1.2",
+    "next": "15.1.3",
     "next-themes": "^0.4.4",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/types": "^19.5.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
@@ -42,7 +43,7 @@
     "autoprefixer": "^10.4.20",
     "cypress": "^13.17.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
